--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "chart.js": "^2.7.3",
     "color": "^3.1.0",
     "draft-js": "^0.10.5",
-    "formik": "^1.4.1",
+    "formik": "^1.4.2",
     "prop-types": "^15.6.2",
     "react": "16.7.0-alpha.2",
+    "react-cache": "^2.0.0-alpha.1",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "16.7.0-alpha.2",
     "react-dropzone": "^7.0.1",
