--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/datetime": "^3.5.0",
-    "@blueprintjs/icons": "^3.4.0",
-    "@types/react": "^16.7.18",
-    "aphrodite": "^2.2.3",
-    "chart.js": "^2.7.3",
-    "color": "^3.1.0",
-    "draft-js": "^0.10.5",
-    "formik": "^1.4.2",
-    "prop-types": "^15.6.2",
-    "react": "16.7.0-alpha.2",
+    "@blueprintjs/datetime": "^3.15.1",
+    "@blueprintjs/icons": "^3.12.0",
+    "@types/react": "^16.9.14",
+    "aphrodite": "^2.4.0",
+    "chart.js": "^2.9.3",
+    "color": "^3.1.2",
+    "draft-js": "^0.11.3",
+    "formik": "^2.0.6",
+    "prop-types": "^15.7.2",
+    "react": "16.12.0",
     "react-cache": "^2.0.0-alpha.1",
-    "react-chartjs-2": "^2.7.4",
-    "react-dom": "16.7.0-alpha.2",
-    "react-dropzone": "^7.0.1",
-    "react-pose": "^4.0.4",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-chartjs-2": "^2.8.0",
+    "react-dom": "16.12.0",
+    "react-dropzone": "^10.2.1",
+    "react-pose": "^4.0.10",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
     "react-select": "^2.2.0",
-    "react-simple-chatbot": "^0.4.2",
-    "react-sortable-hoc": "^1.3.0",
-    "react-spinners": "^0.5.1",
-    "react-spring": "^7.2.8",
-    "react-textarea-autosize": "^7.1.0",
-    "react-transition-group": "^2.5.2",
-    "react-with-styles": "^3.2.1",
-    "react-with-styles-interface-aphrodite": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-sortable-hoc": "^1.10.1",
+    "react-spinners": "^0.6.1",
+    "react-spring": "^8.0.27",
+    "react-textarea-autosize": "^7.1.2",
+    "react-transition-group": "^4.3.0",
+    "react-with-styles": "^4.1.0",
+    "react-with-styles-interface-aphrodite": "^6.0.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "styled-components": "^4.1.3",
-    "styled-system": "^3.2.0",
-    "yup": "^0.26.7"
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,15 +51,15 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3"
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1"
   },
   "browserslist": [
     ">0.2%",
