--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "format": "npm run prettier -- --write",
     "validate": "npm run lint && npm run prettier -- --list-different",
     "eject": "react-scripts eject",
+    "setup": "npm install && npm run validate",
     "precommit": "lint-staged"
   },
   "devDependencies": {
