--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - ~/.npm
 notifications:
   email: false
-node_js: '12'
+node_js: "12"
 install: echo "install happens as part of setup"
 script: npm run setup
 after_script: npx codecov@3
