--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:coverage": "npm run test -- --coverage",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx)\"",
     "lint": "eslint src",
     "format": "npm run prettier -- --write",
-    "validate": "npm run lint && npm run prettier -- --list-different && npm run test",
+    "validate": "npm run lint && npm run prettier -- --list-different && npm run test:coverage",
     "eject": "react-scripts eject",
     "setup": "npm install && npm run validate"
   },
